Setup mvn site on github pages

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,25 @@
 sudo: false
 language: java
-
 cache:
   directories:
-    - "$HOME/.m2"
-
+  - "$HOME/.m2"
 before_cache:
-  - rm -rf $HOME/.m2/repository/com/github/mpkorstanje/simmetrics
-
+- rm -rf $HOME/.m2/repository/com/github/mpkorstanje/simmetrics
 jdk:
-  - oraclejdk8
-
+- oraclejdk8
 branches:
   only:
   - master
   - develop
   - release-*
-
 before_install:
-  - mvn clean
-
+- mvn clean
 after_success:
-  - mvn clean jacoco:prepare-agent test jacoco:report coveralls:report
+- mvn clean jacoco:prepare-agent test jacoco:report coveralls:report
+- mvn site com.github.github:site-maven-plugin:site --settings .m2/travis-settings.xml
+env:
+  global:
+    secure: |-
+      mdEFwlIKWxzBXs/wStAaAwlt9JNY8zOJEy/gjK3KCmfjOvax/QTmlTGFbfZh
+      a0aIkbAf4hxd5nCjvr5cj/flFPhcK9Thu5YGeDIeqbkuSF9Hx5Gle4NsRpj7
+      rtVZOjRBGQ4HkIeD3OQtZdyQtny1MATpBVYSvgAq94ElmSVOFsU=
