--- a/commons-codec-simplifiers/pom.xml
+++ b/commons-codec-simplifiers/pom.xml
@@ -13,6 +13,7 @@
 	<name>Simmetrics Apache Commons Codec Simplifiers</name>
 	<description>Simplifier wrappers for the Apache Commons Codec</description>
 
+
 	<dependencies>
 		<dependency>
 			<groupId>com.github.mpkorstanje</groupId>
@@ -31,5 +32,20 @@
 		</dependency>
 
 	</dependencies>
+
+	<build>
+		<plugins>
+
+			<plugin>
+				<groupId>com.github.github</groupId>
+				<artifactId>site-maven-plugin</artifactId>
+				<configuration>
+					<path>${project.artifactId}</path>
+					<message>Creating site for ${project.name}:${project.version}</message>
+				</configuration>
+			</plugin>
+
+		</plugins>
+	</build>
 
 </project>
