--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 		similarity metrics return normalized values rather than unbounded similarity scores. Distance metrics return
 		non-negative unbounded scores.
 	</description>
-	<url>https://github.com/mpkorstanje/simmetrics</url>
+	<url>https://mpkorstanje.github.io/simmetrics/</url>
 
 	<modules>
 		<module>core</module>
@@ -40,6 +40,7 @@
 	<ciManagement>
 		<system>Travis CI</system>
 		<url>https://travis-ci.org/mpkorstanje/simmetrics</url>
+		<notifiers></notifiers>
 	</ciManagement>
 
 	<issueManagement>
@@ -211,6 +212,22 @@
 					<artifactId>maven-project-info-reports-plugin</artifactId>
 					<version>2.9</version>
 				</plugin>
+				<plugin>
+					<groupId>com.github.github</groupId>
+					<artifactId>site-maven-plugin</artifactId>
+					<version>0.12</version>
+					<configuration>
+						<message>Creating site for ${project.name}:${project.version}</message>
+					</configuration>
+					<executions>
+						<execution>
+							<goals>
+								<goal>site</goal>
+							</goals>
+							<phase>site-deploy</phase>
+						</execution>
+					</executions>
+				</plugin>
 			</plugins>
 		</pluginManagement>
 
@@ -277,6 +294,16 @@
 					</execution>
 				</executions>
 			</plugin>
+
+			<plugin>
+				<groupId>com.github.github</groupId>
+				<artifactId>site-maven-plugin</artifactId>
+				<configuration>
+					<merge>true</merge>
+					<message>Creating site for ${project.name}:${project.version}</message>
+				</configuration>
+			</plugin>
+
 		</plugins>
 	</build>
 
@@ -349,4 +376,13 @@
 			</distributionManagement>
 		</profile>
 	</profiles>
+
+	<reporting>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-project-info-reports-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</reporting>
 </project>
