--- a/core/pom.xml
+++ b/core/pom.xml
@@ -48,4 +48,20 @@
 		</dependency>
 
 	</dependencies>
+
+	<build>
+		<plugins>
+
+			<plugin>
+				<groupId>com.github.github</groupId>
+				<artifactId>site-maven-plugin</artifactId>
+				<configuration>
+					<path>${project.artifactId}</path>
+					<message>Creating site for ${project.name}:${project.version}</message>
+				</configuration>
+			</plugin>
+
+		</plugins>
+	</build>
+
 </project>
