Add javadoc to site

--- a/simmetrics-example/pom.xml
+++ b/simmetrics-example/pom.xml
@@ -24,7 +24,6 @@
 
 	<build>
 		<plugins>
-
 			<plugin>
 				<groupId>com.github.github</groupId>
 				<artifactId>site-maven-plugin</artifactId>
@@ -36,5 +35,20 @@
 
 		</plugins>
 	</build>
+
+
+	<reporting>
+		<plugins>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<reportSets>
+					<reportSet></reportSet>
+				</reportSets>
+			</plugin>
+
+		</plugins>
+	</reporting>
 
 </project>
